4.1.2 2022xxxx
  BF: Build: Optimization of the release info process

4.1.1 20220327
  BF: Maven: Update of dependencies
      CVE-2020-36518
  BF: Build: Optimization of the release info process
  CR: OpenHtmlToPdf: Update to version 1.0.10
  CR: Releases only as attachments on the GitHub release page
      Otherwise the download during cloning will be too large.

4.1.0 20210924
  BF: Maven: Update of dependencies
  BF: Review: Optimization (code + tests)
  CR: OpenHtmlToPdf: Update to version 1.0.9
  CR: Java: Switch to version 11
  CR: Preview: Added argument/option/keyword/... @Resources
      In addition to paths/filters/globs, @Resources can also be used to scan the classpath.
      Without arguments @Resources is used as default.
      When using paths without @Resources, the classpath is not scanned.
  CR: Designer: Added argument/option/keyword/... @Resources
      In addition to paths/filters/globs, @Resources can also be used to scan the classpath.
      Without arguments @Resources is used as default.
      When using paths without @Resources, the classpath is not scanned.
  CR: Maven: Added static code analysis
  CR: Template: Optimization of @Resources, class need not be public

4.0.3 20200830
  BF: Service: Optimization of the code
  BF: Template: Correction/optimization of exists-placeholder
      Exists placeholders are only created if the value is not null, not empty and not blank.
  BF: Template Preview Properties: Correction of the logic during parsing
  BF: JUnit: Cleanup of JUnit4
  BF: Maven: Minimization and update dependencies

4.0.2 20200711
  BF: Generator: Correction of expensive/hungry RegExp
  BF: Template: Correction of expensive/hungry RegExp

4.0.1 20200709
  BF: Template: Correction of Unicode support
      better support/correction e.g. for Japanese and Korean

4.0.0 20200704
  BF: Generator: Correction of errors due to duplicate map entries
      Occurs when the map entries are made case-insensitive.